# Babes-OOP

./: README.md
Contract Studii GUI/: CMakeLists.txt  main.cpp
Contract Studii GUI/Domain/: Disciplina.h  exception.h
Contract Studii GUI/GUI/: DisciplinaGui.cpp  DisciplinaGui.h
Contract Studii GUI/Repository/: Repo.cpp  Repo.h
Contract Studii GUI/Service/: DisciplinaService.cpp  DisciplinaService.h
Docs/lab/: CodeReviewTemplate.odt  Lab0.txt  Lab01.txt  Lab2_4.txt  lab5.txt
Docs/tools/code_coverage_plugin/: install.txt
Examen/: CMakeLists.txt  Gui.cpp  Gui.h  Observer.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Task.cpp  Task.h  date.txt  ferestre.cpp  ferestre.h  main.cpp  testRepo.txt
Lab 7/: Console.cpp  Console.h  Disciplina.h  DisciplinaService.cpp  DisciplinaService.h  Lab 7.vcxproj  Lab 7.vcxproj.filters  MyVector.h  Repo.cpp  Repo.h  disciplinaValidator.cpp  disciplinaValidator.h  main.cpp
Lab 8/: Console.cpp  Console.h  Disciplina.h  DisciplinaService.cpp  DisciplinaService.h  Repo.cpp  Repo.h  exception.h  main.cpp
Lab3/: CMakeLists.txt  main.c
Lab3/Domain/: lista.c  lista.h  medicament.c  medicament.h
Lab3/Service/: Service.c  Service.h
Lab3/Tests/: tests.c  tests.h
Lab3/Ui/: Menu.c  Menu.h
Lab3/Utility/: Utility.c  Utility.h
Lab3/Validator/: validator.c  validator.h
Lab5/: CMakeLists.txt  main.cpp
Lab5/Domain/: Disciplina.cpp  Disciplina.h
Lab5/Repository/: Repo.cpp  Repo.h
Lab5/Service/: DisciplinaService.cpp  DisciplinaService.h
Lab5/Ui/: Console.cpp  Console.h
Lab5/Validator/: Validator.cpp  Validator.h
Simulare_02_QT_GUI/: Produs.cpp  Produs.h  ProdusGui.cpp  ProdusGui.h  Service.cpp  Service.h  date.txt  repository.cpp  repository.h  test.txt
lab 9/lab 9/: Console.cpp  Console.h  Disciplina.cpp  DisciplinaService.cpp  DisciplinaService.h  Repo.cpp  Repo.h  disciplinaValidator.cpp  exception.h  main.cpp  test.csv  test.html  undo.h
lab2/: CMakeLists.txt  main.c
lab2/.cache/clangd/index/: lista.c.2B60A13C11F1B85E.idx  lista.h.FAD39871C0B1EDAD.idx  main.c.D0BE24AC90A85B1F.idx  medicament.c.027673A6D0F46F44.idx  medicament.h.11DC586DBD50C1DA.idx  validator.c.E5FACA04BBB5C8FE.idx  validator.h.2CC639D15B10A273.idx
lab2/Domain/: lista.c  lista.h  medicament.c  medicament.h
lab2/Service/: Service.c  Service.h
lab2/Tests/: tests.c  tests.h
lab2/Ui/: Menu.c  Menu.h
lab2/Utility/: Utility.c  Utility.h
lab2/Validator/: validator.c  validator.h
lab4/include/: console.h  entity.h  repository.h  service.h
lab4/src/: console.c  entity.c  main.c  repository.c  service.c  tests.c
laborator_14_oop/: CMakeLists.txt  main.cpp
laborator_14_oop/Domain/: Disciplina.cpp  Observer.h  disciplinaListModel.cpp  disciplinaListModel.h  disciplinaValidator.cpp  disciplinaValidator.h  undo.h
laborator_14_oop/GUI/: contracteRdonlyGui.cpp  contracteRdonlyGui.h  cosCRUDGui.cpp  cosCRUDGui.h  disciplinaGui.cpp  disciplinaGui.h
laborator_14_oop/Service/: DisciplinaService.cpp  DisciplinaService.h
pregatire_examen/2/: CMakeLists.txt  Gui.cpp  Gui.h  Observer.h  Repository.cpp  Service.cpp  Service.h  Tractor.cpp  Tractor.h  Validator.cpp  Validator.h  main.cpp  repo.txt  testRepo.txt
pregatire_examen/3/: CMakeLists.txt  Gui.cpp  Gui.h  Observer.h  Produs.cpp  Produs.h  Repository.cpp  Repository.h  Service.cpp  Service.h  date.txt  main.cpp  produsGui.cpp  produsGui.h  produsTableModel.cpp  produsTableModel.h  testRepo.txt
pregatire_examen/muzica2/: CMakeLists.txt  Gui.cpp  Gui.h  Melodie.cpp  Melodie.h  MelodieTableModel.cpp  MelodieTableModel.h  Repository.cpp  Repository.h  Service.cpp  Service.h  date.txt  main.cpp  testRepo.txt
pregatire_examen/scris1/: CMakeLists.txt  main.cpp
pregatire_examen/scris2/: CMakeLists.txt  main.cpp
pregatire_examen/untitled/: gui.cpp  gui.h  melodie.cpp  melodie.h  melodieTableModel.cpp  melodieTableModel.h  observer.h  repo.cpp  repo.h  service.cpp  service.h  validator.cpp  validator.h
test_simulare_/: Service.cpp  Service.h  repo.cpp  repo.h  rochie.cpp  rochie.h  rochieGUI.cpp  rochieGUI.h
urgenta/: observer.h  setlist.cpp  table_model_header.h
